--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-
-</head>
-
-<body>
-
-
+ <head>
+	<title>Margaux's favorite surfing spots</title>
+ </head>
+ <body>
+ 	<h1>My Favorite Surfing Spots</h1>
 
 
-</body>
+ 	<p>I love to surf and there are many good spots around the bay area. Here are a few of my favorite spots!</p>
+ 	<br>
+ 	<ul>
+		<li>Ocean Beach</li>
+		<li>Pacifica</li>
+		<li>Half Moon Bay Jetty</li>
 
-
+ 	</ul>
+ </body>
 </html>
