--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
 
  	<p>I love to surf and there are many good spots around the bay area. Here are a few of my favorite spots!</p>
- 	<br>
- 	<ul>
-		<li>Ocean Beach</li>
-		<li>Pacifica</li>
-		<li>Half Moon Bay Jetty</li>
+  <ul>
 
- 	</ul>
+ 	<br/> 
+ 	<li><a href="oceanBeach.html">Ocean Beach</a></li>
+ 	<li><a href="Pacifica.html">Pacifica</a></li>
+ 	<li><a href="halfMoonBayJetty">Half Moon Bay Jetty</a></li>
+
+  </ul>
+
  </body>
 </html>
