--- a/halfMoonBayJetty.html
+++ b/halfMoonBayJetty.html
@@ -9,8 +9,9 @@
 
 
  	<p>Half Moon Bay Jetty Surfing Spot</p>
- 	<br>
- 	
+ 	<img src="halfMoonBayPhoto.jpg" width="60%" height="auto"/>
 
+
+  <br>
  </body>
 </html>
