--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 
  	<p>I love to surf and there are many good spots around the bay area. Here are a few of my favorite spots!</p>
+ 	  <img src="wave.jpg" width="60%" height="auto"/>
   <ul>
-
- 	<br/> 
+ 
  	<li><a href="oceanBeach.html">Ocean Beach</a></li>
  	<li><a href="Pacifica.html">Pacifica</a></li>
  	<li><a href="halfMoonBayJetty">Half Moon Bay Jetty</a></li>
 
-  </ul>
-
+   </ul>
+  <br>
  </body>
 </html>
