--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
 	<title>Margaux's favorite surfing spots</title>
  </head>
  <body>
+ 	<link href="style.css" type="text/css" rel="stylesheet" /> 
  	<h1>My Favorite Surfing Spots</h1>
 
 
  	<p>I love to surf and there are many good spots around the bay area. Here are a few of my favorite spots!</p>
- 	  <img src="wave.jpg" width="60%" height="auto"/>
-  <ul>
- 
  	<li><a href="oceanBeach.html">Ocean Beach</a></li>
  	<li><a href="Pacifica.html">Pacifica</a></li>
- 	<li><a href="halfMoonBayJetty">Half Moon Bay Jetty</a></li>
+ 	<li><a href="halfMoonBayJetty.html">Half Moon Bay Jetty</a></li>
+<br>
+
+ 	  <img src="wave.jpg" width="50%" height="auto"/>
+  <ul>
+
 
    </ul>
   <br>
