--- a/halfMoonBayJetty.html
+++ b/halfMoonBayJetty.html
@@ -5,6 +5,7 @@
 	<title>Half Moon Bay Jetty</title>
  </head>
  <body>
+ 	<link href="style.css" type="text/css" rel="stylesheet" />
  	<h1>My Favorite Surfing Spots</h1>
 
 
