--- a/oceanBeach.html
+++ b/oceanBeach.html
@@ -5,6 +5,7 @@
 	<title>Ocean Beach</title>
  </head>
  <body>
+ 	<link href="style.css" type="text/css" rel="stylesheet" />
  	<h1>My Favorite Surfing Spots</h1>
 
 
