--- a/Pacifica.html
+++ b/Pacifica.html
@@ -12,6 +12,8 @@
 
  	<p>Pacifica Surf Spot</p>
   <img src="pacificaPhoto.jpg" width="60%" height="auto"/> 
+	  <br>
+	 <a href="index.html">home</a>
 
   <br>
  </body>
