--- a/halfMoonBayJetty.html
+++ b/halfMoonBayJetty.html
@@ -12,7 +12,8 @@
 
  	<p>Half Moon Bay Jetty Surfing Spot</p>
  	<img src="halfMoonBayPhoto.jpg" width="60%" height="auto"/>
-
+	  <br>
+	 <a href="index.html">home</a>
 
   <br>
  </body>
