--- a/oceanBeach.html
+++ b/oceanBeach.html
@@ -12,7 +12,8 @@
 
  	<p>Ocean Beach Surf Spot</p>
  	<img src="oceanBeachPhoto.jpg" width="60%" height="auto"/>
-
+	  <br>
+	 <a href="index.html">home</a>
   
   <br>
  </body>
